--- a/marvel/.vscode/launch.json
+++ b/marvel/.vscode/launch.json
@@ -7,16 +7,8 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch via NPM",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": ["start"],
-      "port": 9229
-    },
-    {
-      "type": "node",
-      "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}\\src\\index.js"
+      "program": "${workspaceFolder}\\start"
     }
   ]
 }
